--- a/index.html
+++ b/index.html
@@ -57,151 +57,141 @@
         <!-- Wrapper -->
           <section id="wrapper">
 
-              <section id="two" class="wrapper alt spotlight style1">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/denis.webp" type="image/webp">
-                      <img src="images/denis.jpg" alt="Денис Ежков" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
-                    <p>Денис Ежков, Itech.group (Ульяновск)</p>
-                    <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
-                  </div>
+            <section id="denis" class="wrapper alt spotlight style1">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/denis.webp" type="image/webp">
+                    <img src="images/denis.jpg" alt="Денис Ежков" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
+                  <p>Денис Ежков, Itech.group (Ульяновск)</p>
+                  <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
                 </div>
-              </section>
+              </div>
+            </section>
 
-              <section id="three" class="wrapper spotlight style2">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/dikmarov.webp" type="image/webp">
-                      <img src="images/dikmarov.jpg" alt="Артём Дикмаров" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
-                    <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
-                    <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
-                  </div>
+            <section id="dikmarov" class="wrapper spotlight style2">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/dikmarov.webp" type="image/webp">
+                    <img src="images/dikmarov.jpg" alt="Артём Дикмаров" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
+                  <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
+                  <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
                 </div>
-              </section>
+              </div>
+            </section>
 
-
-            <!-- One -->
-              <section id="one" class="wrapper alt spotlight style1">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/shoot.webp" type="image/webp">
-                      <img src="images/shoot.jpg" alt="Михаил Синяков" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
-                    <p>Михаил Синяков, X-Cart (Ульяновск)</p>
-                    <p>
-                      Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
-                      Зачем усложнять жизнь дополнительной абстракцией?<br>
-                      Какие есть готовые решения?
-                    </p>
-                    <!-- <a href="#" class="special">Learn more</a> -->
-                  </div>
+            <section id="shoot" class="wrapper alt spotlight style1">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/shoot.webp" type="image/webp">
+                    <img src="images/shoot.jpg" alt="Михаил Синяков" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
+                  <p>Михаил Синяков, X-Cart (Ульяновск)</p>
+                  <p>
+                    Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
+                    Зачем усложнять жизнь дополнительной абстракцией?<br>
+                    Какие есть готовые решения?
+                  </p>
                 </div>
-              </section>
+              </div>
+            </section>
 
-
-            <!-- Four -->
-              <section id="four" class="wrapper spotlight style2">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/kostya.webp" type="image/webp">
-                      <img src="images/kostya.jpg" alt="Константин Макарычев" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2 class="major">Не быстрый старт с angular 2</h2>
-                    <p>Константин Макарычев, Provectus (Казань)</p>
-                    <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
-                    <!-- <p>Описание</p> -->
-                  </div>
+            <section id="nikbelikov" class="wrapper spotlight style2">
+              <div class="inner">
+                <a href="http://nikbelikov.ru/" class="image" target="_blank">
+                  <picture>
+                    <source srcset="images/nikbelikov.webp" type="image/webp">
+                    <img src="images/nikbelikov.jpg" alt="Николай Беликов" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2>Немного о сжатии изображений</h2>
+                  <p>Николай Беликов, Restream (Ульяновск)</p>
+                  <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
+                  <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
                 </div>
-              </section>
+              </div>
+            </section>
 
-            <!-- Five -->
-              <section id="five" class="wrapper alt spotlight style3">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/oleg.webp" type="image/webp">
-                      <img src="images/oleg.jpg" alt="Олег Наянов" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2 class="major">CSS Modules</h2>
-                    <p>Олег Наянов, DZ Systems (Ульяновск)</p>
-                    <p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
-                    <!-- <p>Описание</p> -->
-                  </div>
+            <section id="oleg" class="wrapper alt spotlight style1">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/oleg.webp" type="image/webp">
+                    <img src="images/oleg.jpg" alt="Олег Наянов" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2 class="major">CSS Modules</h2>
+                  <p>Олег Наянов, DZ Systems (Ульяновск)</p>
+                  <p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
+                  <!-- <p>Описание</p> -->
                 </div>
-              </section>
+              </div>
+            </section>
 
-            <!-- Seven -->
-              <section id="seven" class="wrapper spotlight style1">
-                <div class="inner">
-                  <a href="#" class="image">
-                    <picture>
-                      <source srcset="images/yarik.webp" type="image/webp">
-                      <img src="images/yarik.jpg" alt="Ярослав Трегубов" />
-                    </picture>
-                  </a>
-                  <div class="content">
-                    <h2>Типографика - такая страшная или прекрасная</h2>
-                    <p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
-                    <p>Расскажу как работать со шрифтами - от дизайна до фронтенда</p>
-                    <!-- <p>Описание</p> -->
-                  </div>
+            <section id="yarik" class="wrapper spotlight style2">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/yarik.webp" type="image/webp">
+                    <img src="images/yarik.jpg" alt="Ярослав Трегубов" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2>Типографика - такая страшная или прекрасная</h2>
+                  <p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
+                  <p>Расскажу как работать со шрифтами - от дизайна до фронтенда.</p>
                 </div>
-              </section>
+              </div>
+            </section>
 
-              <!-- Two -->
+            <section id="kostya" class="wrapper alt spotlight style1">
+              <div class="inner">
+                <a href="#" class="image">
+                  <picture>
+                    <source srcset="images/kostya.webp" type="image/webp">
+                    <img src="images/kostya.jpg" alt="Константин Макарычев" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2 class="major">Не быстрый старт с angular 2</h2>
+                  <p>Константин Макарычев, Provectus (Казань)</p>
+                  <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
+                  <!-- <p>Описание</p> -->
+                </div>
+              </div>
+            </section>
 
-              <!-- Three -->
-                <section id="three" class="wrapper spotlight alt style3">
-                  <div class="inner">
-                    <a href="http://nikbelikov.ru/" class="image" target="_blank">
-                      <picture>
-                        <source srcset="images/nikbelikov.webp" type="image/webp">
-                        <img src="images/nikbelikov.jpg" alt="Николай Беликов" />
-                      </picture>
-                    </a>
-                    <div class="content">
-                      <h2>Немного о сжатии изображений</h2>
-                      <p>Николай Беликов, Restream (Ульяновск)</p>
-                      <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
-                       <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
-                    </div>
-                  </div>
-                </section>
+            <section id="ss" class="wrapper spotlight style2">
+              <div class="inner">
+                <a href="#" class="image" target="_blank">
+                  <picture>
+                    <img src="images/ss.jpg" alt="Фазульянов Роман / Бабич Татьяна" />
+                  </picture>
+                </a>
+                <div class="content">
+                  <h2>Оптимальный во всех смыслах</h2>
+                  <p>Фазульянов Роман / Бабич Татьяна, Simbirsoft (Ульяновск)</p>
+                  <p>Как писать на реакт удобно и быстро.</p>
+                </div>
+              </div>
+            </section>
 
-                <section id="three" class="wrapper spotlight style2">
-                  <div class="inner">
-                    <a href="#" class="image" target="_blank">
-                      <picture>
-                        <img src="images/ss.jpg" alt="Фазульянов Роман / Бабич Татьяна" />
-                      </picture>
-                    </a>
-                    <div class="content">
-                      <h2>Оптимальный во всех смыслах</h2>
-                      <p>Фазульянов Роман / Бабич Татьяна, Simbirsoft (Ульяновск)</p>
-                      <p>Как писать на реакт удобно и быстро</p>
-                    </div>
-                  </div>
-                </section>
-              <section id="" class="wrapper style3 alt">
+            <section id="" class="wrapper style3 alt">
                 <div class="inner">
                   <h2 class="major">Спонсоры</h2>
                   <section class="features">
@@ -298,7 +288,7 @@
 
           </section>
 
-        <!-- Footer -->
+          <!-- Footer -->
           <section id="footer">
             <div class="inner">
               <h2 class="major">Регистрация</h2>
