--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
               </a>
               <div class="content">
                 <h2>Немного о сжатии изображений</h2>
-                <p>Николай Беликов, Restream (Ульяновск)</p>
+                <p>Николай Беликов, Restream (Ульяновск) <br>
+                  <a href="presentations/nikbelikov.pdf" target="_blank">презентация</a>
+                </p>
                 <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
                 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
               </div>
@@ -138,7 +140,6 @@
                 <h2 class="major">CSS Modules</h2>
                 <p>Олег Наянов, DZ Systems (Ульяновск)</p>
                 <p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
-                <!-- <p>Описание</p> -->
               </div>
             </div>
           </section>
@@ -369,7 +370,7 @@
             </ul>
           </div>
         </section>
-        
+
       </div>
 
     <!-- Scripts -->
