--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="inner">
             <img class="logo" src="./logo/fronthub-logo.png" alt="Fronthub" width="70">
             <h2>Ежегодная конференция Fronthub</h2>
-            <p>12 ноября 2016, 11:00</p>
+            <p>Состоялась 12 ноября 2016, 11:00</p>
             <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
                 г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
             <p>Вход свободный</p>
@@ -363,10 +363,9 @@
               <li class="fa-envelope"><a href="mailto:frontendsu@gmail.com?subject=fronthub16">frontendsu@gmail.com</a></li>
               <li class="fa-twitter"><a href="https://twitter.com/frontendsu" target="_blank">twitter.com/frontendsu</a></li>
               <li class="fa-vk"><a href="https://vk.com/frontendsu" target="_blank">vk.com/frontendsu</a></li>
-              <li class="fa-instagram"><a href="https://www.instagram.com/fronthub" target="_blank">instagram.com/fronthub</a></li>
             </ul>
             <ul class="copyright">
-              <li>Fronthub 2014-2016 &copy; Дизайн: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+              <li>Fronthub 2014-2016 &copy Дизайн: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
             </ul>
           </div>
         </section>
