--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <p>«Хаб-Кафе», ТЦ «Спартак» <br/>
                 г.&nbsp;Ульяновск, ул.&nbsp;Железной Дивизии, 5Б</p>
             <p>Вход свободный</p>
-            <a href="#footer">РЕГИСТРАЦИЯ</a>
           </div>
         </section>
 
@@ -292,67 +291,7 @@
         <!-- Footer -->
         <section id="footer">
           <div class="inner">
-            <h2 class="major">Регистрация</h2>
-            <p>Чтобы зарегистрироваться на конференции оставь свой email. Он нужен нам для статистики или если мы решим устроить розыгрыш подарков.  Обязательным является только поле email. Все остальные поля заполняются по желанию, в том случае, если тебе интересны предложения о работе от наших спонсоров. Мы передадим контакты только тех, кто поставит соответствующую галочку внизу.</p>
-            <p>При желании можно еще подписаться на нашу рассылку. Пока не чаще раза в месяц мы будем присылать письмо с опросами, анонсами мероприятий или просто новостями из мира фронтенда.</p>
-            <p>Еще вы можете связаться с нами с помощью соцсетей, а также обратиться по электронной почте.</p>
-            <form action="http://front-end.us14.list-manage.com/subscribe/post?u=74faa70f07b2c214ce2bb3527&amp;id=78a4fd8374" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate reg" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
-                <div class="field">
-                  <label for="mce-EMAIL">Email<span class="asterisk">*</span>:
-                  </label>
-                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                </div>
-                <div class="field">
-                  <label for="mce-FNAME">Имя:</label>
-                  <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-                </div>
-                <div class="field">
-                  <label for="mce-LNAME">Фамилия:</label>
-                  <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-                </div>
-                <div class="field size1of2">
-                  <label for="mce-MMERGE3">Номер телефона:</label>
-                  <input type="text" name="MMERGE3" class="" value="" id="mce-MMERGE3">
-                </div>
-                <p class="indicates-required"><span class="asterisk">*</span> обязательные поля</p>
-                <div class="input-group">
-                  <ul class="list"><li><input type="checkbox" value="1" name="group[1125][1]" id="mce-group[1125]-1125-0"><label for="mce-group[1125]-1125-0">Подписаться на рассылку</label></li>
-                    <li><input type="checkbox" value="2" name="group[1125][2]" id="mce-group[1125]-1125-1"><label for="mce-group[1125]-1125-1">Мне интересны предложения о работе</label></li>
-                  </ul>
-                </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_74faa70f07b2c214ce2bb3527_78a4fd8374" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Отправить" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-              </div>
-            </form>
-            <script src="http://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-            <script >(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='phone'; /*
-           * Translated default messages for the $ validation plugin.
-           * Locale: RU
-           */
-            $.extend($.validator.messages, {
-              required: "Это поле необходимо заполнить.",
-              remote: "Пожалуйста, введите правильное значение.",
-              email: "Пожалуйста, введите корректный адрес электронной почты.",
-              url: "Пожалуйста, введите корректный URL.",
-              date: "Пожалуйста, введите корректную дату.",
-              dateISO: "Пожалуйста, введите корректную дату в формате ISO.",
-              number: "Пожалуйста, введите число.",
-              digits: "Пожалуйста, вводите только цифры.",
-              creditcard: "Пожалуйста, введите правильный номер кредитной карты.",
-              equalTo: "Пожалуйста, введите такое же значение ещё раз.",
-              accept: "Пожалуйста, выберите файл с правильным расширением.",
-              maxlength: $.validator.format("Пожалуйста, введите не больше {0} символов."),
-              minlength: $.validator.format("Пожалуйста, введите не меньше {0} символов."),
-              rangelength: $.validator.format("Пожалуйста, введите значение длиной от {0} до {1} символов."),
-              range: $.validator.format("Пожалуйста, введите число от {0} до {1}."),
-              max: $.validator.format("Пожалуйста, введите число, меньшее или равное {0}."),
-              min: $.validator.format("Пожалуйста, введите число, большее или равное {0}.")
-            });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <h2 class="major">Контакты</h2>
             <ul class="contact">
               <li class="fa-home">
                 «Хаб-кафе», ТЦ «Спартак»<br />
