добавлены две презентации

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
               <div class="content">
                 <h2 class="major">Путь падавана. Как стать web-разработчиком и не поседеть?</h2>
                 <p>Денис Ежков, Itech.group (Ульяновск)</p>
+                <ul>
+                  <li><a href="presentations/denis.pdf" target="_blank">презентация</a></li>
+                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                </ul>
                 <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
               </div>
             </div>
@@ -118,9 +122,11 @@
               </a>
               <div class="content">
                 <h2>Немного о сжатии изображений</h2>
-                <p>Николай Беликов, Restream (Ульяновск) <br>
-                  <a href="presentations/nikbelikov.pdf" target="_blank">презентация</a>
-                </p>
+                <p>Николай Беликов, Restream (Ульяновск)</p>
+                <ul>
+                  <li><a href="presentations/nikbelikov.pdf" target="_blank">презентация</a></li>
+                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                </ul>
                 <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
                 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
               </div>
@@ -138,6 +144,10 @@
               <div class="content">
                 <h2 class="major">CSS Modules</h2>
                 <p>Олег Наянов, DZ Systems (Ульяновск)</p>
+                <ul>
+                  <li><a href="presentations/oleg.pdf" target="_blank">презентация</a></li>
+                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                </ul>
                 <p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
               </div>
             </div>
