добавил презентации и видео

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>Денис Ежков, Itech.group (Ульяновск)</p>
                 <ul>
                   <li><a href="presentations/denis.pdf" target="_blank">презентация</a></li>
-                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                  <li><a href="https://youtu.be/JN4x52Lgh-k" target="_blank">видео</a></li>
                 </ul>
                 <p>Динамика изменений в web-разработке одна из самых высоких. С чего начать и куда двигаться? Как не запутаться в технологических направлениях и понять их перспективы? Какие есть тренды в веб-разработке? Поговорим на эти и другие смежные темы.</p>
               </div>
@@ -87,6 +87,10 @@
               <div class="content">
                 <h2>Сверхбыстрая вёрстка: от макета до Production</h2>
                 <p>Артём Дикмаров, Simtech Development (Ульяновск)</p>
+                <ul>
+                  <li><a href="https://adikmarov.github.io/fronthub-lecture-1/" target="_blank">презентация</a></li>
+                  <li><a href="https://youtu.be/Af2idJDwxo4" target="_blank">видео</a></li>
+                </ul>
                 <p>Максимальное ускорение своей работы. Как можно превысить все несуществующие лимиты в вёрстке сайтов? Как не потерять качество? Собственные кейсы, факапы и просто интересные истории.</p>
               </div>
             </div>
@@ -103,6 +107,10 @@
               <div class="content">
                 <h2 class="major">ОБЩИЙ ЯЗЫК С ДИЗАЙНЕРОМ. РИТМ!</h2>
                 <p>Михаил Синяков, X-Cart (Ульяновск)</p>
+                <ul>
+                  <li><a href="presentations/misha.pdf" target="_blank">презентация</a></li>
+                  <li><a href="https://youtu.be/cNcTEv2kzsE" target="_blank">видео</a></li>
+                </ul>
                 <p>
                   Как я ругался с дизайнерами, а потом мы стали друзьями. <br>
                   Зачем усложнять жизнь дополнительной абстракцией?<br>
@@ -125,7 +133,7 @@
                 <p>Николай Беликов, Restream (Ульяновск)</p>
                 <ul>
                   <li><a href="presentations/nikbelikov.pdf" target="_blank">презентация</a></li>
-                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                  <li><a href="https://youtu.be/HMbaed3Xf6A" target="_blank">видео</a></li>
                 </ul>
                 <p>Оптимизация растра - извечная проблема, но все же хочется поделиться некоторыми вещами, о которых почему-то многие молчат.</p>
                 <a href="http://nikbelikov.ru/" class="special" target="_blank">nikbelikov.ru</a>
@@ -146,7 +154,7 @@
                 <p>Олег Наянов, DZ Systems (Ульяновск)</p>
                 <ul>
                   <li><a href="presentations/oleg.pdf" target="_blank">презентация</a></li>
-                  <li><a href="#" target="_blank">видео (скоро)</a></li>
+                  <li><a href="https://youtu.be/ip3HBCW56V4" target="_blank">видео</a></li>
                 </ul>
                 <p>Попытаемся победить глобальную область видимости в CSS. Страх, ненависть, ошибки, БЭМ, PostCSS, PostHTML - будет все!</p>
               </div>
@@ -164,6 +172,10 @@
               <div class="content">
                 <h2>Типографика - такая страшная или прекрасная</h2>
                 <p>Ярослав Трегубов, PRO100 (Ульяновск)</p>
+                <ul>
+                  <li><a href="presentations/yaroslav.pdf" target="_blank">презентация</a></li>
+                  <li><a href="https://youtu.be/27bnYvQruAM" target="_blank">видео</a></li>
+                </ul>
                 <p>Расскажу как работать со шрифтами - от дизайна до фронтенда.</p>
               </div>
             </div>
@@ -180,6 +192,10 @@
               <div class="content">
                 <h2 class="major">Не быстрый старт с angular 2</h2>
                 <p>Константин Макарычев, Provectus (Казань)</p>
+                <ul>
+                  <li><a href="presentations/kostya.pdf" target="_blank">презентация</a></li>
+                  <li><a href="https://youtu.be/L8oAfSpWS5U" target="_blank">видео</a></li>
+                </ul>
                 <p>Поговорим, как начать разрабатывать на angular 2, как настроить окружение и что делать с этим дальше. Помимо этого обсудим typescript и es6, другие фреймворки и всё такое.</p>
               </div>
             </div>
@@ -196,6 +212,10 @@
               <div class="content">
                 <h2>Оптимальный во всех смыслах</h2>
                 <p>Фазульянов Роман / Бабич Татьяна, Simbirsoft (Ульяновск)</p>
+                <ul>
+                  <li><a href="http://slides.com/tatyana_babich/react_way#/" target="_blank">презентация</a></li>
+                  <li><a href="https://youtu.be/eMeKnPOIxEM" target="_blank">видео</a></li>
+                </ul>
                 <p>Как писать на реакт удобно и быстро.</p>
               </div>
             </div>
