--- a/index.html
+++ b/index.html
@@ -56,6 +56,22 @@
         <!-- Wrapper -->
         <section id="wrapper">
 
+          <section id="" class="wrapper style3 alt">
+            <div class="inner">
+
+              <h2 class="major">Наш slack</h2>
+              <p>
+                <a href="https://slack-fronthub.herokuapp.com/" target="_blank">
+                  <img src="https://a.slack-edge.com/bc86/marketing/img/meta/app-256.png" alt="" class="image">
+                </a>
+                <br>
+                <a href="https://slack-fronthub.herokuapp.com/" target="_blank">
+                  Присоединиться
+                </a>
+              </p>
+            </div>
+          </section>
+
           <section id="denis" class="wrapper alt spotlight style1">
             <div class="inner">
               <a href="#" class="image">
