--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 	<!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="front-end.su">
-	<meta property="og:description" content="front-end разработка в деталях">
-	<meta property="og:url" content="http://front-end.su/">
-	<meta property="og:site_name" content="front-end.su">
+	<meta property="og:title" content="fronthub.ru">
+	<meta property="og:description" content="Ежегодная конференция по фронтенду">
+	<meta property="og:url" content="http://fronthub.ru/">
+	<meta property="og:site_name" content="fronthub.ru">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary" />
 
-	<meta name="twitter:title" content="front-end.su" />
-	<meta name="twitter:description" content="front-end разработка в деталях" />
-	<meta name="twitter:url" content="http://front-end.su/" />
+	<meta name="twitter:title" content="fronthub.ru" />
+	<meta name="twitter:description" content="Ежегодная конференция по фронтенду" />
+	<meta name="twitter:url" content="http://fronthub.ru/" />
 
 	<!-- Icons -->
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -1029,7 +1029,7 @@
 							webvisor: true,
 							clickmap: true,
 							trackLinks: true,
-							accurateTrackBounce: true						
+							accurateTrackBounce: true
 });
 					} catch (e) { }
 				});
