--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- From: https://github.com/mmistakes/hpstr-jekyll-theme/blob/master/_includes/head.html -->
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="fronthub.ru">
+	<meta property="og:title" content="Fronthub.ru">
 	<meta property="og:description" content="Ежегодная конференция по фронтенду">
 	<meta property="og:url" content="http://fronthub.ru/">
 	<meta property="og:site_name" content="fronthub.ru">
@@ -32,7 +32,7 @@
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary" />
 
-	<meta name="twitter:title" content="fronthub.ru" />
+	<meta name="twitter:title" content="Fronthub.ru" />
 	<meta name="twitter:description" content="Ежегодная конференция по фронтенду" />
 	<meta name="twitter:url" content="http://fronthub.ru/" />
 
@@ -760,6 +760,7 @@
 		<!--&lt;!&ndash; Speakers end &ndash;&gt;-->
 
 		<section id="ts-sponsors" class="ts-sponsors">
+			<h2 class="hidden">Спонсоры</h2>
 			<div class="container">
 				<!--<div class="row text-center">-->
 					<!--<span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>-->
