--- a/index.html
+++ b/index.html
@@ -928,6 +928,7 @@
 									<li><a href="https://twitter.com/frontendsu" target="_blank"><i class="fa fa-twitter"></i></a></li>
 									<li><a href="https://vk.com/fronthub_ulsk" target="_blank"><i class="fa fa-vk"></i></a></li>
 									<li><a href="https://www.youtube.com/c/frontendsu" target="_blank"><i class="fa fa-youtube"></i></a></li>
+									<li><a href="https://slack-fronthub.herokuapp.com/" target="_blank"><i class="fa fa-slack"></i></a></li>
 								</ul>
 							</div>
 							<!-- Footer social end -->
