--- a/index.html
+++ b/index.html
@@ -559,205 +559,201 @@
 		<!--</section>-->
 		<!--&lt;!&ndash; Schedule end &ndash;&gt;-->
 
-		<!--<section id="ts-speakers" class="ts-speakers">-->
-		<!--<div class="container">-->
-		<!--<div class="row text-center">-->
-		<!--<span class="icon-wrap"><i class="fa fa-microphone"></i></span>-->
-		<!--<h2 class="section-title title-white">Awesome Speakers</h2>-->
-		<!--<p class="section-sub-title">Listen, Learn, Get inspired.</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;/ Title row end &ndash;&gt;-->
+		<section id="ts-speakers" class="ts-speakers">
+			<div class="container">
+				<div class="row text-center">
+					<span class="icon-wrap"><i class="fa fa-microphone"></i></span>
+					<h2 class="section-title title-white">Докладчики</h2>
+					<p class="section-sub-title">Расскажут о самом новом и интересном.</p>
+				</div>
+				<!--/ Title row end -->
 
-		<!--<div class="row">-->
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker1.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Henry Sr. Flint</a></h3>-->
-		<!--<p class="ts-speaker-designation">CEO, Pkyscanner</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 1 end &ndash;&gt;-->
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/sinyakov.jpg" alt="sinyakov"/>
+								<ul class="social-links">
+									<li><a href="https://vk.com/pvpshoot" target="_blank"><i class="fa fa-vk"></i></a></li>
+									<li><a href="https://twitter.com/pvpshoot" target="_blank"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://github.com/pvpshoot" target="_blank"><i class="fa fa-github"></i></a></li>
+									<li><a href="mailto:pvpshoot@gmail.com"><i class="fa fa-envelope-open"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Михаил Синяков</a></h3>
+								<p class="ts-speaker-designation">Frontend-разработчик</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 1 end -->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker2.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Melisa Lund</a></h3>-->
-		<!--<p class="ts-speaker-designation">Design Lead at Payol</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 2 end &ndash;&gt;-->
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image ts-speaker-image--add">
+								<a href="mailto:frontendsu@gmail.com?subject=Доклад">
+									<img class="img-responsive" src="images/speakers/add.png" alt="add speaker"/>
+								</a>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="mailto:frontendsu@gmail.com?subject=Доклад">Хочу стать</a></h3>
+								<p class="ts-speaker-designation">докладчиком!</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 2 end -->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker3.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Agaton Johnsson</a></h3>-->
-		<!--<p class="ts-speaker-designation">Google Developer Expert</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker3.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Agaton Johnsson</a></h3>-->
+								<!--<p class="ts-speaker-designation">Google Developer Expert</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker4.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Rebecca Henriksson</a></h3>-->
-		<!--<p class="ts-speaker-designation">Design Director at Cards</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker4.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Rebecca Henriksson</a></h3>-->
+								<!--<p class="ts-speaker-designation">Design Director at Cards</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
 
-		<!--</div>-->
-		<!--&lt;!&ndash; Content row 1 end &ndash;&gt;-->
+				</div>
+				<!-- Content row 1 end -->
 
-		<!--<div class="gap-40"></div>-->
+				<!--<div class="gap-40"></div>-->
 
-		<!--<div class="row">-->
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker5.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Olle Gustavsson</a></h3>-->
-		<!--<p class="ts-speaker-designation">Head of Interactive</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 1 end &ndash;&gt;-->
+				<!--<div class="row">-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker5.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Olle Gustavsson</a></h3>-->
+								<!--<p class="ts-speaker-designation">Head of Interactive</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 1 end &ndash;&gt;-->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker6.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Romeo Gunnarsson</a></h3>-->
-		<!--<p class="ts-speaker-designation">iOS Developer</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 2 end &ndash;&gt;-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker6.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Romeo Gunnarsson</a></h3>-->
+								<!--<p class="ts-speaker-designation">iOS Developer</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 2 end &ndash;&gt;-->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker7.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Greta Nyberg</a></h3>-->
-		<!--<p class="ts-speaker-designation">Founder of Chipper</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker7.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Greta Nyberg</a></h3>-->
+								<!--<p class="ts-speaker-designation">Founder of Chipper</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
 
-		<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-		<!--<div class="ts-speaker transparent">-->
-		<!--<div class="ts-speaker-image">-->
-		<!--<img class="img-responsive" src="images/speakers/speaker8.jpg" alt="" />-->
-		<!--<ul class="social-links">-->
-		<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-		<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-		<!--</ul>-->
-		<!--</div>-->
-		<!--&lt;!&ndash;Image end &ndash;&gt;-->
-		<!--<div class="ts-speaker-info">-->
-		<!--<h3 class="ts-speaker-name"><a href="index.html#">Mattias Berglund</a></h3>-->
-		<!--<p class="ts-speaker-designation">It Consultant</p>-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Info end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-		<!--</div>-->
-		<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
+					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
+						<!--<div class="ts-speaker transparent">-->
+							<!--<div class="ts-speaker-image">-->
+								<!--<img class="img-responsive" src="images/speakers/speaker8.jpg" alt=""/>-->
+								<!--<ul class="social-links">-->
+									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
+									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
+								<!--</ul>-->
+							<!--</div>-->
+							<!--&lt;!&ndash;Image end &ndash;&gt;-->
+							<!--<div class="ts-speaker-info">-->
+								<!--<h3 class="ts-speaker-name"><a href="index.html#">Mattias Berglund</a></h3>-->
+								<!--<p class="ts-speaker-designation">It Consultant</p>-->
+							<!--</div>-->
+							<!--&lt;!&ndash; Info end &ndash;&gt;-->
+						<!--</div>-->
+						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
+					<!--</div>-->
+					<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
 
-		<!--</div>-->
-		<!--&lt;!&ndash; Content row 2 end &ndash;&gt;-->
+				<!--</div>-->
+				<!-- Content row 2 end -->
 
-		<!--</div>-->
-		<!--&lt;!&ndash;/ Container end &ndash;&gt;-->
-		<!--</section>-->
-		<!--&lt;!&ndash; Speakers end &ndash;&gt;-->
+			</div>
+			<!--/ Container end -->
+		</section>
+		<!-- Speakers end -->
 
 		<section id="ts-sponsors" class="ts-sponsors">
 			<h2 class="hidden">Спонсоры</h2>
