добавлен новый спикер

--- a/index.html
+++ b/index.html
@@ -583,13 +583,32 @@
 							<!--Image end -->
 							<div class="ts-speaker-info">
 								<h3 class="ts-speaker-name"><a href="index.html#">Михаил Синяков</a></h3>
-								<p class="ts-speaker-designation">Frontend-разработчик</p>
+								<p class="ts-speaker-designation">Restream</p>
 							</div>
 							<!-- Info end -->
 						</div>
 						<!-- Speaker end -->
 					</div>
 					<!-- Speaker Col 1 end -->
+
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/alena.png" alt="Алёна Алексеева" />
+								<ul class="social-links">
+									<li><a href="https://vk.com/evitacore" target="_blank"><i class="fa fa-vk"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Алёна Алексеева</a></h3>
+								<p class="ts-speaker-designation">Тинькофф Банк</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 2 end -->
 
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
@@ -607,7 +626,7 @@
 						</div>
 						<!-- Speaker end -->
 					</div>
-					<!-- Speaker Col 2 end -->
+					<!-- Speaker Col 3 end -->
 
 					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
 						<!--<div class="ts-speaker transparent">-->
