добавлены соц сети

--- a/index.html
+++ b/index.html
@@ -597,6 +597,8 @@
 								<img class="img-responsive" src="images/speakers/alena.png" alt="Алёна Алексеева" />
 								<ul class="social-links">
 									<li><a href="https://vk.com/evitacore" target="_blank"><i class="fa fa-vk"></i></a></li>
+									<li><a href="https://twitter.com/evitacore" target="_blank"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://www.instagram.com/evitacore/" target="_blank"><i class="fa fa-instagram"></i></a></li>
 								</ul>
 							</div>
 							<!--Image end -->
