--- a/index.html
+++ b/index.html
@@ -614,6 +614,26 @@
 
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/vgv.jpg" alt="Василий Васильков" />
+								<ul class="social-links">
+									<li><a href="https://twitter.com/2vgv" target="_blank"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="https://github.com/vgv" target="_blank"><i class="fa fa-github"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Василий Васильков</a></h3>
+								<p class="ts-speaker-designation">Ecwid</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 3 end -->
+
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image ts-speaker-image--add">
 								<a href="mailto:frontendsu@gmail.com?subject=Доклад">
 									<img class="img-responsive" src="images/speakers/add.png" alt="add speaker"/>
@@ -628,7 +648,7 @@
 						</div>
 						<!-- Speaker end -->
 					</div>
-					<!-- Speaker Col 3 end -->
+					<!-- Speaker Col 4 end -->
 
 					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
 						<!--<div class="ts-speaker transparent">-->
