--- a/index.html
+++ b/index.html
@@ -634,6 +634,31 @@
 
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/ezkov.jpg" alt="Денис Ежков" />
+								<ul class="social-links">
+									<li><a href="https://vk.com/denis.ezhkov" target="_blank"><i class="fa fa-vk"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Денис Ежков</a></h3>
+								<p class="ts-speaker-designation">ITECH.group</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 4 end -->
+
+				</div>
+				<!-- Content row 1 end -->
+
+				<div class="gap-40"></div>
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image ts-speaker-image--add">
 								<a href="mailto:frontendsu@gmail.com?subject=Доклад">
 									<img class="img-responsive" src="images/speakers/add.png" alt="add speaker"/>
@@ -648,79 +673,7 @@
 						</div>
 						<!-- Speaker end -->
 					</div>
-					<!-- Speaker Col 4 end -->
-
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker3.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Agaton Johnsson</a></h3>-->
-								<!--<p class="ts-speaker-designation">Google Developer Expert</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 3 end &ndash;&gt;-->
-
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker4.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Rebecca Henriksson</a></h3>-->
-								<!--<p class="ts-speaker-designation">Design Director at Cards</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
-
-				</div>
-				<!-- Content row 1 end -->
-
-				<!--<div class="gap-40"></div>-->
-
-				<!--<div class="row">-->
-					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
-						<!--<div class="ts-speaker transparent">-->
-							<!--<div class="ts-speaker-image">-->
-								<!--<img class="img-responsive" src="images/speakers/speaker5.jpg" alt=""/>-->
-								<!--<ul class="social-links">-->
-									<!--<li><a href="index.html#"><i class="fa fa-instagram"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-linkedin"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>-->
-									<!--<li><a href="index.html#"><i class="fa fa-twitter"></i></a></li>-->
-								<!--</ul>-->
-							<!--</div>-->
-							<!--&lt;!&ndash;Image end &ndash;&gt;-->
-							<!--<div class="ts-speaker-info">-->
-								<!--<h3 class="ts-speaker-name"><a href="index.html#">Olle Gustavsson</a></h3>-->
-								<!--<p class="ts-speaker-designation">Head of Interactive</p>-->
-							<!--</div>-->
-							<!--&lt;!&ndash; Info end &ndash;&gt;-->
-						<!--</div>-->
-						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 1 end &ndash;&gt;-->
+					<!-- Speaker Col 1 end -->
 
 					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
 						<!--<div class="ts-speaker transparent">-->
@@ -742,7 +695,7 @@
 						<!--</div>-->
 						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
 					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 2 end &ndash;&gt;-->
+					<!-- Speaker Col 2 end -->
 
 					<!--<div class="col-xs-12 col-sm-6 col-md-3">-->
 						<!--<div class="ts-speaker transparent">-->
@@ -786,9 +739,9 @@
 						<!--</div>-->
 						<!--&lt;!&ndash; Speaker end &ndash;&gt;-->
 					<!--</div>-->
-					<!--&lt;!&ndash; Speaker Col 4 end &ndash;&gt;-->
+					<!-- Speaker Col 4 end -->
 
-				<!--</div>-->
+				</div>
 				<!-- Content row 2 end -->
 
 			</div>
