--- a/index.html
+++ b/index.html
@@ -750,103 +750,28 @@
 		<!-- Speakers end -->
 
 		<section id="ts-sponsors" class="ts-sponsors">
-			<h2 class="hidden">Спонсоры</h2>
 			<div class="container">
-				<!--<div class="row text-center">-->
-					<!--<span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>-->
-					<!--<h2 class="section-title">Спонсоры и Партнеры</h2>-->
-					<!--<p class="section-sub-title">Благодаря им это событие стало возможным.</p>-->
-				<!--</div>-->
-				<!--/ Title row end -->
-
-				<!--<div class="row text-center">-->
-				<!--<h3 class="sponsor-title">Gold Sponsors</h3>-->
-				<!--<div class="col-xs-12 col-sm-4 col-md-4">-->
-				<!--<a href="index.html#" class="sponsor-logo highlight">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor1.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 1 end &ndash;&gt;-->
-
-				<!--<div class="col-xs-12 col-sm-4 col-md-4">-->
-				<!--<a href="index.html#" class="sponsor-logo highlight">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor2.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 2 end &ndash;&gt;-->
-
-				<!--<div class="col-xs-12 col-sm-4 col-md-4">-->
-				<!--<a href="index.html#" class="sponsor-logo highlight">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor3.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 3 end &ndash;&gt;-->
-				<!--</div>-->
-				<!--&lt;!&ndash;/ Content row 1 end &ndash;&gt;-->
-
-				<!--<div class="row text-center">-->
-				<!--<h3 class="sponsor-title">Silver Sponsors</h3>-->
-				<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-				<!--<a href="index.html#" class="sponsor-logo">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor4.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 1 end &ndash;&gt;-->
-
-				<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-				<!--<a href="index.html#" class="sponsor-logo">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor5.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 2 end &ndash;&gt;-->
-
-				<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-				<!--<a href="index.html#" class="sponsor-logo">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor6.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 3 end &ndash;&gt;-->
-
-				<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-				<!--<a href="index.html#" class="sponsor-logo">-->
-				<!--<img class="img-responsive" src="images/sponsors/sponsor7.png" alt="" />-->
-				<!--</a>-->
-				<!--</div>-->
-				<!--&lt;!&ndash; Col 4 end &ndash;&gt;-->
-				<!--</div>-->
-				<!--&lt;!&ndash;/ Content row 2 end &ndash;&gt;-->
+				<div class="row text-center">
+					<span class="icon-wrap"><i class="fa fa-handshake-o"></i></span>
+					<h2 class="section-title">Спонсоры</h2>
+				</div><!--/ Title row end -->
 
 				<div class="row text-center">
-					<!-- <h3 class="sponsor-title">Коворкинг-центр</h3>
-					<div class="col-md-12">
-						<a href="http://tboil.ru/" class="sponsor-logo" target="_blank">
-							<img class="img-responsive" src="images/sponsors/boiling-point.png" alt="boiling-point logo" />
+					<div class="col-xs-12 col-sm-4 col-md-6">
+						<a href="http://restream.rt.ru/" target="_blank" class="sponsor-logo highlight">
+							<img class="img-responsive" src="images/sponsors/restream.png" alt="" />
 						</a>
-					</div> -->
-					<!-- Col 1 end -->
+					</div><!-- Col 1 end -->
 
-					<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-					<!--<a href="index.html#" class="sponsor-logo">-->
-					<!--<img class="img-responsive" src="images/sponsors/sponsor9.png" alt="" />-->
-					<!--</a>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Col 2 end &ndash;&gt;-->
+					<div class="col-xs-12 col-sm-4 col-md-6">
+						<a href="http://supportix.ru/" target="_blank" class="sponsor-logo highlight">
+							<img class="img-responsive" src="images/sponsors/supportix.png" alt="" />
+						</a>
+					</div><!-- Col 2 end -->
 
-					<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-					<!--<a href="index.html#" class="sponsor-logo">-->
-					<!--<img class="img-responsive" src="images/sponsors/sponsor10.png" alt="" />-->
-					<!--</a>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Col 3 end &ndash;&gt;-->
+				</div><!--/ Content row 1 end -->
 
-					<!--<div class="col-xs-12 col-sm-3 col-md-3">-->
-					<!--<a href="index.html#" class="sponsor-logo">-->
-					<!--<img class="img-responsive" src="images/sponsors/sponsor11.png" alt="" />-->
-					<!--</a>-->
-					<!--</div>-->
-					<!--&lt;!&ndash; Col 4 end &ndash;&gt;-->
-				</div>
-				<!--/ Content row 3 end -->
+			</div><!--/ Container end -->
 
 				<div class="row">
 					<div class="general-btn text-center">
