--- a/index.html
+++ b/index.html
@@ -659,6 +659,26 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
+							<div class="ts-speaker-image">
+								<img class="img-responsive" src="images/speakers/alexey.jpg" alt="Алексей Синдюков" />
+								<ul class="social-links">
+									<li><a href="https://vk.com/sinalex" target="_blank"><i class="fa fa-vk"></i></a></li>
+									<li><a href="https://www.instagram.com/rodjer200586/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+									<li><a href="https://twitter.com/rodjer200586" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								</ul>
+							</div>
+							<!--Image end -->
+							<div class="ts-speaker-info">
+								<h3 class="ts-speaker-name"><a href="index.html#">Алексей Синдюков</a></h3>
+								<p class="ts-speaker-designation">MediaSoft</p>
+							</div>
+							<!-- Info end -->
+						</div>
+						<!-- Speaker end -->
+					</div>
+					<!-- Speaker Col 5 end -->
+					<div class="col-xs-12 col-sm-6 col-md-3">
+						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image ts-speaker-image--add">
 								<a href="mailto:frontendsu@gmail.com?subject=Доклад">
 									<img class="img-responsive" src="images/speakers/add.png" alt="add speaker"/>
