--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
 					<span class="icon-wrap"><i class="fa fa-map"></i></span>
 					<h2 class="section-title title-white">Как добраться?</h2>
 					<p class="section-sub-title">Конференция будет проходить в городе Ульяновске по адресу:</p>
-					<p>улица Железной Дивизии, 5Б, 6 этаж, коворкинг-центр "Точка кипения"</p>
+					<p>улица Спасская 19, 2 этаж (бизнес-центр)</p>
 					<p>&nbsp;</p>
 				</div>
 				<!--/ Title row end -->
@@ -939,14 +939,14 @@
 			$(function () {
 				$('#map')
 					.gmap3({
-						address: "Россия, Ульяновск, улица Железной Дивизии, 5Б",
+						address: "Россия, Ульяновск, улица Спасская, 19",
 						zoom: 16,
-						center: [54.3083591, 48.3876274],
+						center: [54.319564, 48.403283],
 						mapTypeId: google.maps.MapTypeId.ROADMAP,
 						scrollwheel: false
 					})
 					.marker([
-						{ position: [54.3083591, 48.3876274] },
+						{ position: [54.319564, 48.403283] },
 						{ icon: "http://maps.google.com/mapfiles/marker_grey.png" }
 					])
 			});
