--- a/index.html
+++ b/index.html
@@ -729,17 +729,23 @@
 				</div><!--/ Title row end -->
 
 				<div class="row text-center">
-					<div class="col-xs-12 col-sm-4 col-md-6">
+					<div class="col-xs-12 col-sm-4 col-md-4">
 						<a href="http://restream.rt.ru/" target="_blank" class="sponsor-logo highlight">
-							<img class="img-responsive" src="images/sponsors/restream.png" alt="" />
+							<img class="img-responsive" src="images/sponsors/restream.png" alt="restream logo" />
 						</a>
 					</div><!-- Col 1 end -->
 
-					<div class="col-xs-12 col-sm-4 col-md-6">
+					<div class="col-xs-12 col-sm-4 col-md-4">
 						<a href="http://supportix.ru/" target="_blank" class="sponsor-logo highlight">
-							<img class="img-responsive" src="images/sponsors/supportix.png" alt="" />
+							<img class="img-responsive" src="images/sponsors/supportix.png" alt="supportix logo" />
 						</a>
 					</div><!-- Col 2 end -->
+
+					<div class="col-xs-12 col-sm-4 col-md-4">
+						<a href="http://php73.ru/" target="_blank" class="sponsor-logo highlight">
+							<img class="img-responsive" src="images/sponsors/mediasoft.png" alt="mediasoft logo" />
+						</a>
+					</div><!-- Col 3 end -->
 
 				</div><!--/ Content row 1 end -->
 
