ссылки на докладчиков

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 									<div class="schedule-listing">
 										<span class="schedule-slot-time">11:00 - 11:45</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#ezkov">
 												<img class="schedule-slot-speakers" src="images/speakers/ezkov.jpg"
 													 alt=""/>
 											</a>
@@ -326,7 +326,7 @@
 									<div class="schedule-listing">
 										<span class="schedule-slot-time">11:45 - 12:30</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#vadim">
 												<img class="schedule-slot-speakers" src="images/speakers/vadim.jpg"
 													 alt=""/>
 											</a>
@@ -344,7 +344,7 @@
 									<div class="schedule-listing">
 										<span class="schedule-slot-time">12:30 - 13:15</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#oh">
 												<img class="schedule-slot-speakers" src="images/speakers/ohrimenko.jpg"
 													 alt=""/>
 											</a>
@@ -362,7 +362,7 @@
 									<div class="schedule-listing listing-last">
 										<span class="schedule-slot-time">13:15 - 14:00</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#elm">
 												<img class="schedule-slot-speakers" src="images/speakers/vgv.jpg"
 													 alt=""/>
 											</a>
@@ -394,7 +394,7 @@
 									<div class="schedule-listing listing-last">
 										<span class="schedule-slot-time">15:00 - 15:45</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#alena">
 												<img class="schedule-slot-speakers" src="images/speakers/alena.png"
 													 alt=""/>
 											</a>
@@ -411,7 +411,7 @@
 									<div class="schedule-listing listing-last">
 										<span class="schedule-slot-time">15:45 - 16:30</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#alex">
 												<img class="schedule-slot-speakers" src="images/speakers/alexey.jpg"
 													 alt=""/>
 											</a>
@@ -428,7 +428,7 @@
 									<div class="schedule-listing listing-last">
 										<span class="schedule-slot-time">16:30 - 17:15</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#fp">
 												<img class="schedule-slot-speakers" src="images/speakers/sinyakov.jpg"
 													 alt=""/>
 											</a>
@@ -445,7 +445,7 @@
 									<div class="schedule-listing listing-last">
 										<span class="schedule-slot-time">17:15 - 18:30</span>
 										<div class="schedule-slot-info">
-											<a href="index.html#">
+											<a href="#beginners">
 												<img class="schedule-slot-speakers" src="images/speakers/ermakov.jpg"
 													 alt=""/>
 											</a>
@@ -661,7 +661,7 @@
 				<!--/ Title row end -->
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="fp" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/sinyakov.jpg" alt="sinyakov"/>
@@ -683,7 +683,7 @@
 					</div>
 					<!-- Speaker Col 1 end -->
 
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="alena" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/alena.png" alt="Алёна Алексеева" />
@@ -704,7 +704,7 @@
 					</div>
 					<!-- Speaker Col 2 end -->
 
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="elm" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/vgv.jpg" alt="Василий Васильков" />
@@ -724,7 +724,7 @@
 					</div>
 					<!-- Speaker Col 3 end -->
 
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="ezkov" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/ezkov.jpg" alt="Денис Ежков" />
@@ -749,7 +749,7 @@
 				<div class="gap-40"></div>
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="alex" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/alexey.jpg" alt="Алексей Синдюков" />
@@ -768,7 +768,7 @@
 						</div>
 						<!-- Speaker end -->
 					</div>
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="vadim" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/vadim.jpg" alt="Вадим Марьин" />
@@ -788,7 +788,7 @@
 						<!-- Speaker end -->
 					</div>
 					<!-- Speaker Col 5 end -->
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="beginners" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/ermakov.jpg" alt="Денис Ермаков" />
@@ -812,7 +812,7 @@
 						<!-- Speaker end -->
 					</div>
 					<!-- Speaker Col 6 end -->
-					<div class="col-xs-12 col-sm-6 col-md-3">
+					<div id="oh" class="col-xs-12 col-sm-6 col-md-3">
 						<div class="ts-speaker transparent">
 							<div class="ts-speaker-image">
 								<img class="img-responsive" src="images/speakers/ohrimenko.jpg" alt="Алексей Охрименко" />
