--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 											<div class="schedule-slot-info-content">
 												<h3 class="schedule-slot-title">Инструменты дизайнера и чем они могут помочь фронтендерам</h3>
 												<h4 class="schedule-slot-speaker-name">Вадим Марьин</h4>
-												<p class="schedule-slot-desc">Расскажу про свой набор софта, как дружить с фронтендерами, и почему это хорошо для всех.</p>
+												<p class="schedule-slot-desc">Расскажу про свой набор софта, как дружить с фронтендерами и почему это хорошо для всех.</p>
 											</div>
 											<!--Info content end -->
 										</div>
