стили блоков в расписании

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 									</div>
 									<!-- Slot listing 4 end -->
 
-									<div class="schedule-listing listing-last">
+									<div class="schedule-listing">
 										<span class="schedule-slot-time">13:15 - 14:00</span>
 										<div class="schedule-slot-info">
 											<a href="#elm">
@@ -379,7 +379,7 @@
 									</div>
 									<!-- Slot listing 5 end -->
 
-									<div class="schedule-listing listing-last">
+									<div class="schedule-listing">
 										<span class="schedule-slot-time">14:00 - 15:00</span>
 										<div class="schedule-slot-info">
 											<div class="schedule-slot-info-content">
@@ -391,7 +391,7 @@
 										<!-- Slot info end -->
 									</div>
 
-									<div class="schedule-listing listing-last">
+									<div class="schedule-listing">
 										<span class="schedule-slot-time">15:00 - 15:45</span>
 										<div class="schedule-slot-info">
 											<a href="#alena">
@@ -408,7 +408,7 @@
 										<!-- Slot info end -->
 									</div>
 
-									<div class="schedule-listing listing-last">
+									<div class="schedule-listing">
 										<span class="schedule-slot-time">15:45 - 16:30</span>
 										<div class="schedule-slot-info">
 											<a href="#alex">
@@ -425,7 +425,7 @@
 										<!-- Slot info end -->
 									</div>
 
-									<div class="schedule-listing listing-last">
+									<div class="schedule-listing">
 										<span class="schedule-slot-time">16:30 - 17:15</span>
 										<div class="schedule-slot-info">
 											<a href="#fp">
