--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 											<div class="schedule-slot-info-content">
 												<h3 class="schedule-slot-title">Какой стек выбрать джуниору, чтобы заработать денег, принести пользу и сохранить карму</h3>
 												<h4 class="schedule-slot-speaker-name">Денис Ермаков</h4>
-												<p class="schedule-slot-desc">Это будет профориентационная рефлексия, основанная на моем 5-летнем опыте сперва front-end, а затем full-stack девелопера и 10 летнем опыте в роли PM и продукт-менеджера. Мы поговорим о том, как разработчику стартануть в профессии, как найти баланс между изучением нового и рутиной, как стать незаменимым.</p>
+												<p class="schedule-slot-desc">Это будет профориентационная рефлексия, основанная на моем 5-летнем опыте сперва front-end, а затем full-stack девелопера и 10-летнем опыте в роли PM и продукт-менеджера. Мы поговорим о том, как разработчику стартануть в профессии, как найти баланс между изучением нового и рутиной, как стать незаменимым.</p>
 											</div>
 											<!--Info content end -->
 										</div>
